reworked jwt to properly handle session
